# SafeMesh

./: .gitignore  LICENSE  README.md  SafeMesh.entitlements
Backend/: .env  Cargo.toml  README.md  vpn.db
Backend/migrations/: 20240307120000_init.sql
Backend/src/: lib.rs  main.rs
Backend/src/api/: mod.rs
Backend/src/api/v1/: mod.rs
Backend/src/auth/: mod.rs
Backend/src/config/: mod.rs
Backend/src/database/: mod.rs
Backend/src/email/: mod.rs
Backend/src/handlers/: mod.rs
Backend/src/middleware/: mod.rs
Backend/src/models/: mod.rs
Backend/src/services/: mod.rs
Backend/src/utils/: mod.rs
Database/migrations/: 001_initial_schema.sql  002_seed_servers.sql
Database/schemas/: configs.json  servers.json  sessions.json  subscriptions.json  users.json
Frontend/: SafeMeshApp.swift
Frontend/Components/: AlertView.swift  ConnectionButton.swift  CountryFlag.swift  LoadingView.swift  PingIndicator.swift  ServerCard.swift  StatusIndicator.swift
Frontend/Models/: APIServer.swift  Configuration.swift  Subscription.swift  Usage.swift  User.swift  VPNServer.swift  VPNStatus.swift
Frontend/PacketTunnelExtension/: PacketHandler.swift  PacketTunnel.entitlements  PacketTunnelProvider.swift  TunnelConfiguration.swift  WireGuardTunnel.swift
Frontend/Services/: APIClient.swift  ConfigManager.swift  IPCManager.swift  KeyManager.swift  Logger.swift  (+4 more)
PacketTunnelExtension/: PacketTunnelExtension.entitlements  PacketTunnelProvider.swift
SafeMesh/: ContentView.swift
SafeMesh.xcodeproj/: project.pbxproj
Scripts/: build_wireguard_go_bridge.sh
(+35 files in other folders)
